# self-service-consumer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.config/: copier-answers.helm-chart-unittests.yaml
docker/selfservice-invitation/: Dockerfile
docker/selfservice-listener/: Dockerfile  entrypoint-ensure-volume-permissions.sh  entrypoint-ldap-master.sh
docs/: design-considerations.md
helm/selfservice-consumer/: Chart.yaml  README.md  linter_values.yaml  values.yaml  wait-for-provisioning-api.sh
helm/selfservice-consumer/.kyverno/: kyverno-test.yaml.jinja2  values-kyverno.yaml
helm/selfservice-consumer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret-provisioning-api.yaml
helm/selfservice-listener/: .gitignore  Chart.yaml  README.md  linter_values.yaml  values.yaml
helm/selfservice-listener/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  statefulset.yaml
invitation/: __main__.py  config.py  consumer.py
listener/: selfservice_listener.py
tests/: __init__.py
tests/chart/: conftest.py  test_provisioning.py  test_provisioning_authentication.py  test_provisioning_connection.py  test_umc.py  test_umc_connection.py
tests/chart/common_behavior/: test_image_configuration.py
tests/unit/: test_invitation.py
