[tool.poetry]
name = "selfservice-listener"
version = "0.1.0"
description = "Univention Management Stack - Selfservice Listener"
authors = [
    "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
readme = "README.md"
packages = [{ include = "invitation" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"
anyio = "^4.3.0"
provisioning-consumer-lib = "^0.23.3"

[tool.poetry.scripts]
selfservice = "invitation.__main__:run"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "4.1"

[[tool.poetry.source]]
name = "ucs"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
