[tool.poetry]
name = "selfservice-listener"
version = "0.1.0"
description = "Univention Management Stack - Selfservice Listener"
authors = [
    "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
readme = "README.md"
packages = [{ include = "invitation" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
anyio = "^4.3.0"
nubus-provisioning-consumer = "0.41.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "4.1"

[[tool.poetry.source]]
name = "ucs"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["univention"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
